# Workaround to bootstrap maturin on non-manylinux platforms
[build-system]
requires = ["setuptools", "wheel>=0.36.2", "tomli>=1.1.0 ; python_version<'3.11'", "setuptools-rust>=1.4.0"]
build-backend = "setuptools.build_meta"

[project]
name = "maturin"
requires-python = ">=3.7"
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["tomli>=1.1.0 ; python_version<'3.11'"]
dynamic = [
    "authors",
    "description",
    "license",
    "readme",
    "version"
]

[project.optional-dependencies]
zig = [
    "ziglang~=0.10.0",
]
patchelf = [
    "patchelf",
]

[project.urls]
"Source Code" = "https://github.com/PyO3/maturin"
Issues = "https://github.com/PyO3/maturin/issues"
Documentation = "https://maturin.rs"
Changelog = "https://maturin.rs/changelog.html"

[tool.maturin]
bindings = "bin"

[tool.black]
target_version = ['py37']
extend-exclude = '''
# Ignore cargo-generate templates
^/src/templates
'''

[tool.ruff]
line-length = 120
target-version = "py37"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    # maturin specific excludes
    "venvs",
    "target",
    "targets",
    # auto-generated files
    "test-crates/cffi-mixed/cffi_mixed/cffi_mixed/ffi.py",
    "test-crates/uniffi-mixed/uniffi_mixed/uniffi_mixed/math.py",
]
