[package]
authors = ["konstin <konstin@mailbox.org>"]
name = "get-fourtytwo"
version = "2.0.1"
description = "This implements a dummy function (get_fortytwo.DummyClass.get_42()) in rust"
readme = "Readme.md"

[package.metadata.pyo3-pack.scripts]
get_42 = "get_fourtytwo:DummyClass.get_42"

[dependencies]
pyo3 = { version = "0.5.0-alpha.3", features = ["extension-module"] }

[lib]
name = "get_fourtytwo"
crate-type = ["cdylib"]
