[package]
authors = ["konstin <konstin@mailbox.org>"]
name = "get-fourtytwo"
version = "2.0.1"
description = "This implements a dummy function (get_fortytwo.DummyClass.get_42()) in rust"
readme = "Readme.md"
edition = "2018"

[package.metadata.pyo3-pack.scripts]
get_42 = "get_fourtytwo:DummyClass.get_42"

[dependencies]
# TODO: Remove this once pypy suppport is merged and released
pyo3 = { git = "https://github.com/omerbenamram/pyo3", branch = "master-pypy", features = ["extension-module"] }

[lib]
name = "get_fourtytwo"
crate-type = ["cdylib"]
