[package]
authors = ["konstin <konstin@mailbox.org>"]
name = "get-fourtytwo"
version = "2.1.0"
description = "Implements a dummy function (get_fortytwo.DummyClass.get_42()) in rust"
readme = "Readme.md"
edition = "2018"

[package.metadata.pyo3-pack.scripts]
get_42 = "get_fourtytwo:DummyClass.get_42"

[dependencies]
# TODO: Remove this once pypy suppport is merged and released
pyo3 = { git = "https://github.com/pyo3/pyo3", rev = "f8bf2586026a70233e570a2b12f53f409955754f", features = ["extension-module"] }

[lib]
name = "get_fourtytwo"
crate-type = ["cdylib"]
