[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2018"
description = "{{description}}"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "{{crate_name}}"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.15.1", features = ["extension-module"] }
