[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"

[project]
name = "{{project-name}}"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
{% if binding == "cffi" -%}
dependencies = ["cffi"]
{%- endif %}
[tool.maturin]
bindings = "{{binding}}"
