[package]
name = "cargo-mock"
version = "0.1.0"
authors = ["konstin <konstin@mailbox.org>"]
edition = "2018"

[[bin]]
name = "cargo"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.5"
serde_json = "1.0.40"
cargo_metadata = "0.8.0"