[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "cffi_mixed_implicit"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Rust"
]
dependencies = ["cffi"]
dynamic = ["version"]

[tool.maturin]
bindings = "cffi"
module-name = "cffi_mixed_implicit.some_rust.rust"
python-source = "python"
