[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "cffi-mixed-include-exclude"
readme = "README.md"
classifiers = ["Programming Language :: Python", "Programming Language :: Rust"]
requires-python = ">=3.7"
dependencies = ["cffi"]
dynamic = ["version"]

[tool.maturin]
bindings = "cffi"
include = [
  "cffi_mixed_include_exclude/include_this_file",
  "missing",
  "README.md",
  { path = "generated_info.txt", from = "out-dir", to = "cffi_mixed_include_exclude/" },
]
exclude = [
  "cffi_mixed_include_exclude/exclude_this_file",
  "cffi_mixed_include_exclude/.gitignore",
  "tests/**/*",
  "unused",
]
