[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "cffi-mixed-src"
readme = "README.md"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Rust"
]
requires-python = ">=3.7"
dependencies = ["cffi"]
dynamic = ["version"]

[tool.maturin]
bindings = "cffi"
python-packages = ["cffi_mixed_src"]
