[package]
name = "hello-world"
version = "0.1.0"
authors = ["konstin <konstin@mailbox.org>"]
edition = "2021"
# Test references to out-of-project files
readme = "../../README.md"
default-run = "hello-world"

[dependencies]

[[bench]]
name = "excluded_bench"

[[bench]]
name = "included_bench"

[[example]]
name = "excluded_example"

[[example]]
name = "included_example"
