[project]
name = "hello-world"
version = "0.1.0"
license-files = ["LICENSE", "licenses/*"]
dynamic = ["authors", "readme"]  # Allow authors and readme from Cargo.toml to be used

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
bindings = "bin"

[[tool.maturin.targets]]
name = "hello-world"
bindings = "bin"

[[tool.maturin.targets]]
name = "foo"
