[package]
name = "lib_with_disallowed_lib"
version = "0.1.0"
authors = ["messense <messense@icloud.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
libz-sys = { version = "1.1.2", default-features = false }
# Don't use the macros feature, which makes compilation much faster
pyo3 = { version = "0.13.2", default-features = false, features = ["extension-module"] }
