[package]
name = "lib_with_disallowed_lib"
version = "0.1.0"
authors = ["messense <messense@icloud.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
libz-sys = { version = "1.1.2", default-features = false }
pyo3 = { git = "https://github.com/ngoldbaum/pyo3", branch = "opaque-pyobject" }
