[package]
name = "pyo3-abi3-and-abi3t"
version = "0.1.0"
edition = "2021"
description = "Combined abi3 and abi3t test crate for maturin"
license = "MIT"

[dependencies]
pyo3 = { version = "0.29.0" }

[features]
default = ["abi3-and-abi3t-py315"]
abi3-and-abi3t-py315 = [
    "pyo3/abi3-py38",
    "pyo3/abi3t-py315",
]
abi3-and-current-abi3t = [
    "pyo3/abi3-py38",
    "pyo3/abi3t",
]

[lib]
name = "pyo3_abi3_and_abi3t"
crate-type = ["cdylib"]
