[package]
name = "pyo3-abi3-without-version"
version = "0.1.0"
authors = ["konstin <konstin@mailbox.org>"]
edition = "2021"

[dependencies]
pyo3 = { git = "https://github.com/ngoldbaum/pyo3", branch = "opaque-pyobject", features = ["abi3"] }

[lib]
name = "pyo3_abi3_without_version"
crate-type = ["cdylib"]
