[package]
name = "pyo3-ffi-pure"
version = "1.0.0"
edition = "2021"

[dependencies]
pyo3-ffi = { git = "https://github.com/ngoldbaum/pyo3", branch = "opaque-pyobject", features = ["abi3-py39", "abi3t-py315"] }

[build-dependencies]
pyo3-build-config = { git = "https://github.com/ngoldbaum/pyo3", branch = "opaque-pyobject" }

[lib]
name = "pyo3_ffi_pure"
crate-type = ["cdylib"]
