[package]
authors = ["Kevin Patterson <kevin.r.patterson@intel.com>"]
name = "pyo3-mixed-implicit"
version = "2.1.3"
description = "Implements a dummy function combining rust and python"
readme = "README.md"
edition = "2021"

[dependencies]
pyo3 = { version = "0.23.1", features = ["extension-module"] }

[lib]
name = "pyo3_mixed_implicit"
crate-type = ["cdylib"]
