[build-system]
requires = ["maturin>=0.15,<0.16"]
build-backend = "maturin"

[project]
name = "pyo3_mixed_implicit.some_rust"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Rust"
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "pyo3_mixed_implicit.some_rust.rust"
python-source = "pysrc"

