[package]
authors = []
name = "pyo3-mixed-include-exclude"
version = "2.1.3"
description = "Implements a dummy function combining rust and python"
edition = "2021"

[dependencies]
pyo3 = { version = "0.17.3", features = [
  "extension-module",
  "generate-import-lib",
] }

[lib]
name = "pyo3_mixed_include_exclude"
crate-type = ["cdylib"]
