[package]
authors = []
name = "pyo3-mixed-include-exclude"
version = "2.1.3"
description = "Implements a dummy function combining rust and python"
edition = "2021"

[dependencies]
pyo3 = { git = "https://github.com/ngoldbaum/pyo3", branch = "opaque-pyobject", features = ["generate-import-lib"] }

[lib]
name = "pyo3_mixed_include_exclude"
crate-type = ["cdylib"]
